labs/meshobservability-metrics/order-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order
    version: v1
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
      version: v1
  template:
    metadata:
      labels:
        app: order
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
    spec:
      serviceAccountName: order
      containers:
      - name: order
        image: registry.ocp4.example.com:8443/developer/ossm-metrics-order:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: order

---
