labs/meshobservability-metrics/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product
    version: v1
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
      version: v1
  template:
    metadata:
      labels:
        app: product
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
    spec:
      serviceAccountName: product
      containers:
      - name: product
        image: registry.ocp4.example.com:8443/developer/ossm-metrics-product:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: product
  labels:
    app: product
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: product
---
