labs/meshobservability-metrics/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: meshobservability-metrics-gateway
  labels:
    version: v1
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
